--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,9 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/we_are_us_symbol.svg" />
+  <!-- Google Client Sign-in ID -->
+  <meta name="google-signin-client_id"
+    content="423149440415-l1v06tlarr297mkbv1oh5g2jv0pgdrv3.apps.googleusercontent.com">
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" />
@@ -17,6 +20,21 @@
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
+  <div id="fb-root"></div>
+  <!-- Facebook JDK -->
+  <script>
+    window.fbAsyncInit = function () {
+      FB.init({
+        appId: '311556100263228',
+        autoLogAppEvents: true,
+        xfbml: true,
+        version: 'v8.0'
+      });
+    };
+  </script>
+  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js"></script>
+  <!-- Google Platform Library -->
+  <script async defer crossorigin="anonymous" src="https://apis.google.com/js/platform.js"></script>
 </body>
 
 </html>
